# aoc_2024

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
instructions/: day_2.txt  day_4.txt
solutions/: day_1.py  day_2.py  day_3.py  day_4.py  day_5.py
templates/: solution_template.py  test_solution_template.py
tests/: conftest.py  test_day_1.py  test_input_utils.py
tests/solutions/: test_day_1.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py
tests/utils/: test_generate_day.py  test_input_utils.py
utils/: config.py  generate_day.py  input_utils.py  update_progress.py
utils/models/: config.py
