[tool.poetry]
name = "aoc-2024"
version = "0.1.0"
description = "Advent of Code 2024"
authors = ["Chris Spann <cspanndev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.10.2"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"
ruff = "^0.8.1"
pytest-mock = "^3.14.0"
pre-commit = "^4.0.1"

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.pytest.ini_options]
addopts = "--cov=solutions --cov=utils --cov-report=term-missing"
pythonpath = ["."]
norecursedirs = ["templates"]

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "*/utils/*"
]

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = ["templates", "utils"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
